@@ -7,6 +7,7 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestTemplate;
 import org.taskservice.dto.CreateTaskRequest;
 import org.taskservice.dto.ReminderRequest;
@@ -14,15 +15,20 @@ import org.taskservice.exception.TaskValidationException;
 import org.taskservice.model.Task;
 import org.taskservice.repository.TaskRepository;
 
+import java.lang.reflect.Field;
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -32,130 +38,121 @@ import static org.mockito.Mockito.when;
 class TaskServiceTest {
 
     @Mock
-    private TaskRepository taskRepository;
+    private TaskRepository mockTaskRepository;
 
     @Mock
-    private RestTemplate restTemplate;
+    private RestTemplate mockRestTemplate;
 
     @InjectMocks
     private TaskService taskService;
 
     private Task sampleTask;
-    private CreateTaskRequest createTaskRequest;
+    private CreateTaskRequest validCreateRequest;
 
     @BeforeEach
     void setUp() {
-        sampleTask = new Task(
-                UUID.randomUUID(),
-                "Test Task",
-                "This is a sample task",
-                LocalDate.now(),
-                LocalDate.now().plusDays(5)
-        );
-        createTaskRequest = new CreateTaskRequest(
-                "Test Task",
-                "Task description",
-                LocalDate.now().plusDays(5)
-        );
+        final UUID taskId = UUID.randomUUID();
+        final String title = "Test Task";
+        final String description = "This is a sample task";
+        final LocalDate creationDate = LocalDate.now();
+        final LocalDate dueDate = creationDate.plusDays(5);
+
+        sampleTask = new Task(taskId, title, description, creationDate, dueDate);
+        validCreateRequest = new CreateTaskRequest(title, "Task description", dueDate);
+    }
+
+    private String getReminderEndpoint() throws Exception {
+        final Field field = TaskService.class.getDeclaredField("reminderServiceBaseUrl");
+        field.setAccessible(true);
+        final String baseUrl = (String) field.get(taskService);
+        return baseUrl + "/reminders";
     }
 
     @Test
     void shouldGetAllTasks() {
-        when(taskRepository.findAll()).thenReturn(List.of(sampleTask));
+        when(mockTaskRepository.findAll()).thenReturn(Collections.singletonList(sampleTask));
 
-        List<Task> tasks = taskService.getTasks();
+        final List<Task> tasks = taskService.getTasks();
 
-        assertFalse(tasks.isEmpty());
         assertEquals(1, tasks.size());
         assertEquals("Test Task", tasks.get(0).taskTitle());
-        verify(taskRepository, times(1)).findAll();
+        verify(mockTaskRepository, times(1)).findAll();
     }
 
     @Test
     void shouldGetTaskByIdWhenPresent() {
-        when(taskRepository.findById(sampleTask.taskId())).thenReturn(sampleTask);
+        when(mockTaskRepository.findById(sampleTask.taskId())).thenReturn(sampleTask);
 
-        Optional<Task> result = taskService.getTask(sampleTask.taskId());
+        final Optional<Task> result = taskService.getTask(sampleTask.taskId());
 
         assertTrue(result.isPresent());
         assertEquals("Test Task", result.get().taskTitle());
-        verify(taskRepository, times(1)).findById(sampleTask.taskId());
+        verify(mockTaskRepository, times(1)).findById(sampleTask.taskId());
     }
 
     @Test
     void shouldReturnEmptyOptionalWhenTaskNotFound() {
-        when(taskRepository.findById(sampleTask.taskId())).thenReturn(null);
+        when(mockTaskRepository.findById(sampleTask.taskId())).thenReturn(null);
 
-        Optional<Task> result = taskService.getTask(sampleTask.taskId());
+        final Optional<Task> result = taskService.getTask(sampleTask.taskId());
 
         assertFalse(result.isPresent());
-        verify(taskRepository, times(1)).findById(sampleTask.taskId());
+        verify(mockTaskRepository, times(1)).findById(sampleTask.taskId());
     }
 
     @Test
-    void shouldCreateTaskAndTriggerReminder() {
-        ArgumentCaptor<Task> taskCaptor = ArgumentCaptor.forClass(Task.class);
+    void shouldCreateTaskAndTriggerReminder() throws Exception {
+        when(mockRestTemplate.postForEntity(anyString(), any(), eq(Void.class)))
+                .thenReturn(ResponseEntity.ok().build());
 
-        taskService.createTask(createTaskRequest);
+        taskService.createTask(validCreateRequest);
 
-        verify(taskRepository, times(1)).save(taskCaptor.capture());
-        Task savedTask = taskCaptor.getValue();
+        final ArgumentCaptor<ReminderRequest> requestCaptor = ArgumentCaptor.forClass(ReminderRequest.class);
 
-        ArgumentCaptor<ReminderRequest> reminderCaptor =
-                ArgumentCaptor.forClass(ReminderRequest.class);
+        verify(mockRestTemplate, times(1))
+                .postForEntity(eq(getReminderEndpoint()), requestCaptor.capture(), eq(Void.class));
 
-        verify(restTemplate, times(1))
-                .postForEntity(
-                        eq("http://localhost:8081/reminders"),
-                        reminderCaptor.capture(),
-                        eq(Void.class)
-                );
-
-        ReminderRequest sent = reminderCaptor.getValue();
-        assertEquals(savedTask.taskId(), sent.getTaskId());
-        assertTrue(sent.getMessage().startsWith("Reminder for task: " + createTaskRequest.taskTitle()));
+        final ReminderRequest reminderRequest = requestCaptor.getValue();
+        assertNotNull(reminderRequest.getTaskId());
+        assertTrue(reminderRequest.getMessage().contains("Reminder for task: " + validCreateRequest.taskTitle()));
     }
-
 
     @Test
     void shouldThrowExceptionForInvalidTaskTitle() {
-        CreateTaskRequest invalidRequest =
-                new CreateTaskRequest("", "Valid description", LocalDate.now().plusDays(1));
+        final CreateTaskRequest invalidRequest = new CreateTaskRequest("", "Valid description", LocalDate.now().plusDays(1));
 
-        TaskValidationException ex = assertThrows(
+        final TaskValidationException exception = assertThrows(
                 TaskValidationException.class,
                 () -> taskService.createTask(invalidRequest)
         );
-        assertEquals("Task title cannot be empty", ex.getMessage());
+        assertEquals("Task title cannot be empty", exception.getMessage());
     }
 
     @Test
     void shouldThrowExceptionForPastDueDate() {
-        CreateTaskRequest invalidRequest =
-                new CreateTaskRequest("Valid title", "Valid description", LocalDate.now().minusDays(1));
+        final CreateTaskRequest invalidRequest = new CreateTaskRequest("Valid title", "Valid description", LocalDate.now().minusDays(1));
 
-        TaskValidationException ex = assertThrows(
+        final TaskValidationException exception = assertThrows(
                 TaskValidationException.class,
                 () -> taskService.createTask(invalidRequest)
         );
-        assertEquals("Due date cannot be in the past", ex.getMessage());
+        assertEquals("Due date cannot be in the past", exception.getMessage());
     }
 
     @Test
-    void shouldTriggerReminderDirectly() {
+    void shouldTriggerReminderDirectly() throws Exception {
+        when(mockRestTemplate.postForEntity(anyString(), any(), eq(Void.class)))
+                .thenReturn(ResponseEntity.ok().build());
+
         taskService.triggerReminder(sampleTask);
 
-        ArgumentCaptor<ReminderRequest> captor = ArgumentCaptor.forClass(ReminderRequest.class);
+        final ArgumentCaptor<ReminderRequest> requestCaptor = ArgumentCaptor.forClass(ReminderRequest.class);
 
-        verify(restTemplate, times(1))
-                .postForEntity(
-                        eq("http://localhost:8081/reminders"),
-                        captor.capture(),
-                        eq(Void.class)
-                );
+        verify(mockRestTemplate, times(1))
+                .postForEntity(eq(getReminderEndpoint()), requestCaptor.capture(), eq(Void.class));
 
-        ReminderRequest sent = captor.getValue();
-        assertEquals(sampleTask.taskId(), sent.getTaskId());
-        assertTrue(sent.getMessage().contains("Reminder for task: " + sampleTask.taskTitle()));
+        final ReminderRequest reminderRequest = requestCaptor.getValue();
+        assertEquals(sampleTask.taskId(), reminderRequest.getTaskId());
+        assertTrue(reminderRequest.getMessage().contains("Reminder for task: " + sampleTask.taskTitle()));
     }
 }
